# test

./: .gitmodules
c/kr/: circular-buffer.c
c/kr/kr-ch7-210419/: my_cat.c  my_copy.c  my_echo.c
c/project0/: main.c
cmake/: CMakeLists.txt  Main.cxx  MainConfig.h.in
cpp/project0/: main.c  main.cpp
html/: index.html  script.js
node/project0/: Book.xlsx  index.js  package-lock.json  package.json
node/project0/api/: fs.js  promises.js
node/project0/data/: settings.json  settingsSorted.json
node/project0/features/: flattenObject.js  sleep.js  (+2 more)
node/test-session/: index.js
node/test-socket/: index.js  package-lock.json  package.json
nodejs/: index.js  package.json
nodejs/src/: lookup.js  module1.js  module2.js  test-auth.js  test-axios.js  test-mongodb.js  test-scope.js
nodejs/test-auth/: package-lock.json  package.json
nodejs/test-misc/: index.js  package.json
nodejs/test-modules/: index.js  package.json
nodejs/test-mongodb/: package-lock.json  package.json
nodejs/test-redis/: index.js
nodejs/test-session/: package-lock.json  package.json
python/: README.md
python/project0/: Pipfile  new0928.py  test.py
python/project1/: app.py  read.md
react/default-app/: package-lock.json  package.json
react/project0/: package-lock.json
react/react-app/: package-lock.json
react/test-react/: package-lock.json  package.json
react/test-socket-f/: package-lock.json  package.json
react/test-storybook/: package-lock.json  package.json
web/test-all/: index.html  script.js  style.css  temp.html
web/test-google-charts/: index.html  pie-chart.js
(+105 files in other folders)
